labs/old-2018-lab1/testsuite/bad/bad060.cc
int foo() {
else return 5;
}
